add get spaceship by id