@@ -2,7 +2,12 @@ package com.project.port.service;
 
 import com.project.port.client.PilotClient;
 import com.project.port.client.SpaceshipClient;
-import com.project.port.dto.*;
+import com.project.port.dto.PilotClientRequest;
+import com.project.port.dto.PilotClientResponse;
+import com.project.port.dto.PilotDto;
+import com.project.port.dto.SpaceshipClientResponse;
+import com.project.port.dto.SpaceshipDto;
+import com.project.port.exception.NotFoundException;
 import com.project.port.mapper.PilotMapper;
 import com.project.port.mapper.SpaceshipMapper;
 import org.junit.jupiter.api.AfterEach;
@@ -16,10 +21,25 @@ import org.mockito.quality.Strictness;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 
-import static com.project.port.common.Constant.*;
+import static com.project.port.common.Constant.buildPilotClientRequest;
+import static com.project.port.common.Constant.buildPilotClientResponse;
+import static com.project.port.common.Constant.buildPilotDto;
+import static com.project.port.common.Constant.buildSpaceshipClientResponse;
+import static com.project.port.common.Constant.buildSpaceshipClientResponseWithNoCrewIds;
+import static com.project.port.common.Constant.buildSpaceshipDto;
+import static com.project.port.common.Constant.buildSpaceshipDtoWithNoCrewDetails;
+import static com.project.port.common.Constant.buildSpaceshipDtoWithNoCrewDetailsAndCrewIds;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.WARN)
@@ -41,7 +61,13 @@ class SpaceshipServiceImplTest {
 
   private SpaceshipDto spaceshipDto;
 
+  private SpaceshipDto spaceshipDtoWithNoCrewDetails;
+
+  private SpaceshipDto spaceshipDtoWithNoCrewDetailsAndCrewIds;
+
   private SpaceshipClientResponse spaceshipClientResponse;
+
+  private SpaceshipClientResponse spaceshipClientResponseWithNoCrewIds;
 
   private PilotClientRequest pilotClientRequest;
 
@@ -53,10 +79,13 @@ class SpaceshipServiceImplTest {
   void setUp() {
     spaceshipService = new SpaceshipServiceImpl(spaceshipClientMock, pilotClientMock, spaceshipMapperMock, pilotMapperMock);
     spaceshipDto = buildSpaceshipDto();
+    spaceshipDtoWithNoCrewDetails = buildSpaceshipDtoWithNoCrewDetails();
     spaceshipClientResponse = buildSpaceshipClientResponse();
     pilotClientRequest = buildPilotClientRequest();
     pilotClientResponse = buildPilotClientResponse();
     pilotDto = buildPilotDto();
+    spaceshipDtoWithNoCrewDetailsAndCrewIds = buildSpaceshipDtoWithNoCrewDetailsAndCrewIds();
+    spaceshipClientResponseWithNoCrewIds = buildSpaceshipClientResponseWithNoCrewIds();
   }
 
   @AfterEach
@@ -66,12 +95,9 @@ class SpaceshipServiceImplTest {
 
   @Test
   void getAll() {
-    final SpaceshipDto spaceshipDtoWithNoPilotDetails = spaceshipDto.toBuilder()
-        .crew(Collections.emptyList())
-        .build();
     when(spaceshipClientMock.getSpaceships()).thenReturn(List.of(spaceshipClientResponse));
-    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponse)).thenReturn(spaceshipDtoWithNoPilotDetails);
-    when(pilotMapperMock.idsToClientRequest(spaceshipDtoWithNoPilotDetails.getCrewIds())).thenReturn(pilotClientRequest);
+    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponse)).thenReturn(spaceshipDtoWithNoCrewDetails);
+    when(pilotMapperMock.idsToClientRequest(spaceshipDtoWithNoCrewDetails.getCrewIds())).thenReturn(pilotClientRequest);
     when(pilotClientMock.getPilotsByIds(pilotClientRequest)).thenReturn(List.of(pilotClientResponse));
     when(pilotMapperMock.clientResponseToDto(pilotClientResponse)).thenReturn(pilotDto);
 
@@ -80,7 +106,6 @@ class SpaceshipServiceImplTest {
     assertThat(actual)
         .hasSize(1)
         .contains(spaceshipDto);
-    assertThat(actual.get(0).getCrew()).contains(pilotDto);
     verify(spaceshipMapperMock).clientResponseToDto(spaceshipClientResponse);
     verify(spaceshipClientMock).getSpaceships();
     verify(pilotMapperMock).idsToClientRequest(spaceshipDto.getCrewIds());
@@ -103,23 +128,17 @@ class SpaceshipServiceImplTest {
 
   @Test
   void getAll_spaceshipsHaveNoPilots() {
-    final SpaceshipClientResponse spaceshipClientResponseWithNoPilots = spaceshipClientResponse.toBuilder()
-        .crewIds(Collections.emptyList())
-        .build();
-    final SpaceshipDto spaceshipDtoWithNoPilots = spaceshipDto.toBuilder()
-        .crewIds(Collections.emptyList())
-        .crew(Collections.emptyList())
-        .build();
-    when(spaceshipClientMock.getSpaceships()).thenReturn(List.of(spaceshipClientResponseWithNoPilots));
-    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponseWithNoPilots)).thenReturn(spaceshipDtoWithNoPilots);
+    when(spaceshipClientMock.getSpaceships()).thenReturn(List.of(spaceshipClientResponseWithNoCrewIds));
+    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponseWithNoCrewIds))
+        .thenReturn(spaceshipDtoWithNoCrewDetailsAndCrewIds);
 
     final List<SpaceshipDto> actual = spaceshipService.getAll();
 
     assertThat(actual)
         .hasSize(1)
-        .contains(spaceshipDtoWithNoPilots);
+        .contains(spaceshipDtoWithNoCrewDetailsAndCrewIds);
     assertThat(actual.get(0).getCrew()).isEmpty();
-    verify(spaceshipMapperMock).clientResponseToDto(spaceshipClientResponseWithNoPilots);
+    verify(spaceshipMapperMock).clientResponseToDto(spaceshipClientResponseWithNoCrewIds);
     verify(spaceshipClientMock).getSpaceships();
     verifyNoInteractions(pilotClientMock);
     verifyNoInteractions(pilotMapperMock);
@@ -127,22 +146,87 @@ class SpaceshipServiceImplTest {
 
   @Test
   void getAll_noPilotsReturnedFromClient() {
-    final SpaceshipDto spaceshipDtoWithNoPilotDetails = spaceshipDto.toBuilder()
-        .crew(Collections.emptyList())
-        .build();
     when(spaceshipClientMock.getSpaceships()).thenReturn(List.of(spaceshipClientResponse));
-    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponse)).thenReturn(spaceshipDtoWithNoPilotDetails);
-    when(pilotMapperMock.idsToClientRequest(spaceshipDtoWithNoPilotDetails.getCrewIds())).thenReturn(pilotClientRequest);
+    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponse)).thenReturn(spaceshipDtoWithNoCrewDetails);
+    when(pilotMapperMock.idsToClientRequest(spaceshipDtoWithNoCrewDetails.getCrewIds())).thenReturn(pilotClientRequest);
     when(pilotClientMock.getPilotsByIds(pilotClientRequest)).thenReturn(Collections.emptyList());
 
     final List<SpaceshipDto> actual = spaceshipService.getAll();
 
     assertThat(actual)
         .hasSize(1)
-        .contains(spaceshipDtoWithNoPilotDetails);
+        .contains(spaceshipDtoWithNoCrewDetails);
     assertThat(actual.get(0).getCrew()).isEmpty();
     verify(spaceshipMapperMock).clientResponseToDto(spaceshipClientResponse);
     verify(spaceshipClientMock).getSpaceships();
+    verify(pilotMapperMock).idsToClientRequest(spaceshipDto.getCrewIds());
+    verify(pilotClientMock).getPilotsByIds(pilotClientRequest);
+    verify(pilotMapperMock, times(0)).clientResponseToDto(any());
+  }
+
+  @Test
+  void getById() {
+    final UUID reqId = spaceshipDtoWithNoCrewDetails.getId();
+    when(spaceshipClientMock.getSpaceshipById(reqId)).thenReturn(Optional.of(spaceshipClientResponse));
+    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponse)).thenReturn(spaceshipDtoWithNoCrewDetails);
+    when(pilotMapperMock.idsToClientRequest(spaceshipDtoWithNoCrewDetails.getCrewIds())).thenReturn(pilotClientRequest);
+    when(pilotClientMock.getPilotsByIds(pilotClientRequest)).thenReturn(List.of(pilotClientResponse));
+    when(pilotMapperMock.clientResponseToDto(pilotClientResponse)).thenReturn(pilotDto);
+
+    final SpaceshipDto actual = spaceshipService.getById(reqId);
+
+    assertThat(actual).isEqualTo(spaceshipDto);
+    verify(spaceshipClientMock).getSpaceshipById(reqId);
+    verify(spaceshipMapperMock).clientResponseToDto(spaceshipClientResponse);
+    verify(pilotMapperMock).idsToClientRequest(spaceshipDtoWithNoCrewDetails.getCrewIds());
+    verify(pilotClientMock).getPilotsByIds(pilotClientRequest);
+    verify(pilotMapperMock).clientResponseToDto(pilotClientResponse);
+  }
+
+  @Test
+  void getById_notFound() {
+    final UUID reqId = spaceshipDtoWithNoCrewDetails.getId();
+    when(spaceshipClientMock.getSpaceshipById(reqId)).thenReturn(Optional.empty());
+
+    assertThrows(NotFoundException.class, () -> spaceshipService.getById(reqId));
+
+    verify(spaceshipClientMock).getSpaceshipById(reqId);
+    verifyNoInteractions(spaceshipMapperMock);
+    verifyNoInteractions(pilotMapperMock);
+    verifyNoInteractions(pilotClientMock);
+  }
+
+  @Test
+  void getById_spaceshipHasNoPilots() {
+    final UUID reqId = spaceshipDtoWithNoCrewDetailsAndCrewIds.getId();
+    when(spaceshipClientMock.getSpaceshipById(reqId)).thenReturn(Optional.ofNullable(spaceshipClientResponseWithNoCrewIds));
+    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponseWithNoCrewIds))
+        .thenReturn(spaceshipDtoWithNoCrewDetailsAndCrewIds);
+
+    final SpaceshipDto actual = spaceshipService.getById(reqId);
+
+    assertThat(actual).isEqualTo(spaceshipDtoWithNoCrewDetailsAndCrewIds);
+    assertThat(actual.getCrew()).isEmpty();
+    verify(spaceshipClientMock).getSpaceshipById(reqId);
+    verify(spaceshipMapperMock).clientResponseToDto(spaceshipClientResponseWithNoCrewIds);
+    verifyNoInteractions(pilotClientMock);
+    verifyNoInteractions(pilotMapperMock);
+  }
+
+  @Test
+  void getById_noPilotsReturnedFromClient() {
+    final UUID reqId = spaceshipDtoWithNoCrewDetails.getId();
+    when(spaceshipClientMock.getSpaceshipById(reqId)).thenReturn(Optional.of(spaceshipClientResponse));
+    when(spaceshipMapperMock.clientResponseToDto(spaceshipClientResponse)).thenReturn(spaceshipDtoWithNoCrewDetails);
+    when(pilotMapperMock.idsToClientRequest(spaceshipDtoWithNoCrewDetails.getCrewIds())).thenReturn(pilotClientRequest);
+    when(pilotClientMock.getPilotsByIds(pilotClientRequest)).thenReturn(Collections.emptyList());
+
+    final SpaceshipDto actual = spaceshipService.getById(reqId);
+
+    assertThat(actual).isEqualTo(spaceshipDtoWithNoCrewDetails);
+    assertThat(actual.getCrew()).isEmpty();
+    verify(spaceshipClientMock).getSpaceshipById(reqId);
+    verify(spaceshipMapperMock).clientResponseToDto(spaceshipClientResponse);
     verify(pilotMapperMock).idsToClientRequest(spaceshipDto.getCrewIds());
     verify(pilotClientMock).getPilotsByIds(pilotClientRequest);
     verify(pilotMapperMock, times(0)).clientResponseToDto(any());
